--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -15,7 +15,7 @@
 
     <meta property="og:title" content="Ad Astra To Do — система управления делами" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="%VITE_URL%/static/imageog.png" />
+    <meta property="og:image" content="%VITE_URL%/imageog.png" />
     <meta property="og:url" content="%VITE_URL%" />
     <meta property="og:description" content="Наведи порядок в жизни с легкостью и удовольствием" />
     <meta property="og:site_name" content="Ad Astra To Do" />
@@ -23,15 +23,15 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Ad Astra To Do — система управления делами" />
     <meta name="twitter:description" content="Наведи порядок в жизни с легкостью и удовольствием" />
-    <meta name="twitter:image" content="%VITE_URL%/static/imagetw.png" />
+    <meta name="twitter:image" content="%VITE_URL%/imagetw.png" />
     <meta name="twitter:site" content="@Igor_Vaulin" />
     <meta name="twitter:creator" content="@Igor_Vaulin" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/32x32.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/static/192x192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/static/512x512.png" />
-    <meta name="msapplication-TileImage" content="/static/144x144.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="512x512.png" />
+    <meta name="msapplication-TileImage" content="144x144.png" />
 
     <script type="module">
       import { reactive, html } from "@arrow-js/core"
