--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -50,14 +50,13 @@
     <div id="App"></div>
     <footer class="py-6 text-lg text-white dark:text-neutral-400 fontaccent">
       <div class="container mx-auto text-center">
-        <p class="mb-4"><strong class="fontaccent">Ad Astra To Do</strong></p>
-        <p class="mb-4 fontaccent"
-          >Система управления делами
-          <a href="https://t.me/vaulinblog" class="underline fontaccent" target="_blank" rel="noopener noreferrer"
-            >Игоря Ваулина</a
+        <p class="mb-4"
+          ><a href="https://t.me/adastratodoclub" class="underline fontaccent" target="_blank" rel="noopener noreferrer"
+            ><strong class="fontaccent">Ad Astra To Do</strong></a
           ></p
         >
-        <p class="mt-4 mb-12 fontaccent">v.0.2.14</p>
+        <!-- <p class="mb-4 fontaccent">Система управления делами Игоря Ваулина</p> -->
+        <p class="mt-4 mb-12 fontaccent">v.0.2.15</p>
       </div>
     </footer>
   </body>
