--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -11,7 +11,9 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0" />
 
     <meta property="og:title" content="Ad Astra To Do — система управления делами" />
     <meta property="og:type" content="website" />
@@ -60,7 +62,7 @@
             >Система управления делами Игоря Ваулина</a
           ></p
         >
-        <p class="mt-4 mb-12 fontaccent">v.0.5.9</p>
+        <p class="mt-4 mb-12 fontaccent">v.0.5.10</p>
       </div>
     </footer>
   </body>
