--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -13,8 +13,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0" />
-
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
     <meta property="og:title" content="Ad Astra To Do — система управления делами" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="%VITE_URL%/imageog.png" />
@@ -62,7 +61,7 @@
             >Система управления делами Игоря Ваулина</a
           ></p
         >
-        <p class="mt-4 mb-12 fontaccent">v.0.5.14</p>
+        <p class="mt-4 mb-12 fontaccent">v.0.5.15</p>
       </div>
     </footer>
   </body>
