--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="%VITE_URL%" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="white" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
