--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -10,7 +10,7 @@
     <link rel="canonical" href="%VITE_URL%" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="theme-color" content="#d36e70" />
+    <meta name="theme-color" content="#d36e70" id="theme-color-meta" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
@@ -34,9 +34,6 @@
     <link rel="icon" type="image/png" sizes="512x512" href="512x512.png" />
     <meta name="msapplication-TileImage" content="144x144.png" />
 
-    <script type="module">
-      import { reactive, html } from "@arrow-js/core"
-    </script>
     <script type="module" src="/index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
