--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -9,6 +9,7 @@
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="%VITE_URL%" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="theme-color" content="#d36e70" id="theme-color-meta" />
     <meta
