--- a/arrowclient/info/donate/index.html
+++ b/arrowclient/info/donate/index.html
@@ -1,72 +1,69 @@
+<!doctype html>
+<html class="bg-white min-h-screen dark:bg-black">
+  <head>
+    <title>Ad Astra To Do</title>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Наведи порядок в жизни с легкостью и удовольствием" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="icon" type="image/png" sizes="32x32" href="32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="180x180.png" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Roboto+Mono:wght@300&family=Open+Sans&display=swap" />
+    <link rel="stylesheet" href="../../index.css" />
+  </head>
+  <body class="text-lg min-h-screen cursor-default select-none touch-pan-y">
+    <div class="fixed w-full h-full bg-cover bgimg bg-neutral-100 dark:bg-neutral-950 -z-10"></div>
 
-    <!doctype html>
-    <html class="bg-white min-h-screen dark:bg-black">
-      <head>
-        <title>Ad Astra To Do</title>
-        <meta charset="UTF-8" />
-        <meta name="description" content="Наведи порядок в жизни с легкостью и удовольствием" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <link rel="icon" type="image/png" sizes="32x32" href="32x32.png" />
-        <link rel="apple-touch-icon" sizes="180x180" href="180x180.png" />
-        <link
-          rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Roboto+Mono:wght@300&family=Open+Sans&display=swap" />
-        <link rel="stylesheet" href="../../index.css" />
-      </head>
-      <body class="text-lg min-h-screen cursor-default select-none touch-pan-y">
-        <div class="fixed w-full h-full bg-cover bgimg bg-neutral-100 dark:bg-neutral-900 -z-10"></div>
-
-        <div id="App" class="  flex flex-col gap-6 pb-80 max-w-full min-h-screen w-40rem px-3 m-auto">
-          <div class="mt-10 bg-neutral-100 dark:bg-neutral-900 flex justify-center p-2">
-            <button
-              class="w-2/5  top-4 left-4 fontaccent uppercase text-base text-clip overflow-hidden p-1 text-black dark:text-neutral-100 bg-neutral-150 dark:bg-neutral-700 text-center block border-white dark:border-black rounded-0 border-b-02rem peer-checked:border-b-02rem peer-checked:border-accent peer-checked:bg-neutral-150 dark:peer-checked:bg-neutral-700 dark:peer-checked:border-accent-dark active:border-b-accent dark:active:border-b-accent-dark active:border-b-accent dark:active:border-b-accent-dark transition-colors duration-100"
-              onclick="window.location.href='/'">
-              Вернуться к приложению
-            </button></div
-          >
-          <div class="select-auto flex flex-col gap-3 break-words bg-neutral-100 dark:bg-neutral-900 p-3 rounded-lg overflow dark:text-white">
-            
-    <div class="donation-page text-center m-auto">
-      <h1 class="text-4xl font-bold mb-4">Поддержите нас</h1>
-      <p class="text-lg mb-6">Если вам нравится наша работа, вы можете нас поддержать!</p>
-      <div class="mb-4">
-        <a
-          href="https://boosty.to/adastratodo"
-          target="_blank"
-          class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600 block mb-2">
-          Поддержать на Boosty
-        </a>
-        <a
-          href="https://www.patreon.com/c/adastratodo"
-          target="_blank"
-          class="bg-green-500 text-white py-2 px-4 rounded hover:bg-green-600 block">
-          Поддержать на Patreon
-        </a>
-      </div>
-      <p class="text-lg mb-6">
-        Также вы можете подписаться на наш канал в Telegram!<br />
-        Нам это тоже очень поможет!</p
+    <div id="App" class="flex flex-col gap-6 pb-80 max-w-full min-h-screen w-40rem px-3 m-auto">
+      <div class="mt-10 bg-neutral-100 dark:bg-neutral-950 flex justify-center p-2">
+        <button
+          class="w-2/5 top-4 left-4 fontaccent uppercase text-base text-clip overflow-hidden p-1 text-black dark:text-neutral-100 bg-neutral-150 dark:bg-neutral-700 text-center block border-white dark:border-black rounded-0 border-b-02rem peer-checked:border-b-02rem peer-checked:border-accent peer-checked:bg-neutral-150 dark:peer-checked:bg-neutral-700 dark:peer-checked:border-accent-dark active:border-b-accent dark:active:border-b-accent-dark active:border-b-accent dark:active:border-b-accent-dark transition-colors duration-100"
+          onclick="window.location.href='/'">
+          Вернуться к приложению
+        </button></div
       >
-      <a
-        href="https://t.me/vaulinblog"
-        target="_blank"
-        class="bg-gray-700 text-white py-2 px-4 rounded hover:bg-gray-800">
-        Подписаться на Telegram-канал
-      </a>
-    </div>
-    <br />
-  </div
-          >
-        </div>
-        <footer class="py-6 text-lg text-white dark:text-neutral-400 fontaccent">
-          <div class="container mx-auto text-center">
-            <p class="mb-4 fontaccent">
-              <a href="https://t.me/vaulinblog" class="underline fontaccent" target="_blank" rel="noopener noreferrer">
-                Система управления делами Игоря Ваулина
-              </a>
-            </p>
+      <div
+        class="select-auto flex flex-col gap-3 break-words bg-neutral-100 dark:bg-neutral-950 p-3 rounded-lg overflow dark:text-white">
+        <div class="donation-page text-center m-auto">
+          <h1 class="text-4xl font-bold mb-4">Поддержите нас</h1>
+          <p class="text-lg mb-6">Если вам нравится наша работа, вы можете нас поддержать!</p>
+          <div class="mb-4">
+            <a
+              href="https://boosty.to/adastratodo"
+              target="_blank"
+              class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600 block mb-2">
+              Поддержать на Boosty
+            </a>
+            <a
+              href="https://www.patreon.com/c/adastratodo"
+              target="_blank"
+              class="bg-green-500 text-white py-2 px-4 rounded hover:bg-green-600 block">
+              Поддержать на Patreon
+            </a>
           </div>
-        </footer>
-      </body>
-    </html>
-  
+          <p class="text-lg mb-6">
+            Также вы можете подписаться на наш канал в Telegram!<br />
+            Нам это тоже очень поможет!</p
+          >
+          <a
+            href="https://t.me/vaulinblog"
+            target="_blank"
+            class="bg-gray-700 text-white py-2 px-4 rounded hover:bg-gray-800">
+            Подписаться на Telegram-канал
+          </a>
+        </div>
+        <br />
+      </div>
+    </div>
+    <footer class="py-6 text-lg text-white dark:text-neutral-400 fontaccent">
+      <div class="container mx-auto text-center">
+        <p class="mb-4 fontaccent">
+          <a href="https://t.me/vaulinblog" class="underline fontaccent" target="_blank" rel="noopener noreferrer">
+            Система управления делами Игоря Ваулина
+          </a>
+        </p>
+      </div>
+    </footer>
+  </body>
+</html>
